2014-10-07  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_macosx.tcl:

	* library/tkdnd_unix.tcl: Added support for DND_HTML in XDND.

2014-09-21  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_macosx.tcl:
	* library/tkdnd_unix.tcl: Changed implementation to re-use the
	generic implementation.

	* library/tkdnd_generic.tcl: Two new procedures,
	generic::GetWindowCommonTypes and generic::FindWindowWithCommonTypes.
	The last one tries to find a window that can accept the current drag.

	* unix/TkDND_XDND.c: Fixed a bug in getting the "acccepted" field
	in XdndFinished.

	* demos/overlapping_targets.tcl: New demo (more a "testing" utility for
	mega-widget support).

	* CMakeLists.txt:
	* configure.in: Updated installed files.

	* demos/basic.tcl:
	* demos/dndSpy.tcl:
	* demos/simple_target.tcl: Bug fixes.

	* library/tkdnd.tcl:
	* library/tkdnd_macosx.tcl:
	* library/tkdnd_unix.tcl: Various bug fixes.

	* win/OleDND.h:
	* win/TkDND_OleDND.cpp:
	* library/tkdnd_windows.tcl: Changed implementation to re-use the
	generic implementation.

	* library/tkdnd_generic.tcl: Added a new "generic" implementation of
	handling drops, with the aim to be re-used by all supported platforms.

2014-08-19  Petasis George  <petasis@iit.demokritos.gr>
	* unix/TkDND_XDND.c:
	* win/OleDND.h: Corrected behaviour when mouse drags over overlapping
	windows. Bug reported by Csaba Nemethi.

2014-08-13  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_windows.tcl:
	* library/tkdnd.tcl:
	* library/tkdnd_unix.tcl:
	* library/tkdnd_macosx.tcl:
	* macosx/macdnd.m: Added support for complex sources under OS X.

	* CMakeLists.txt: A few fixes for OS X.

	* demos/complex_source.tcl:
	* demos/simple_source.tcl: Ensure returned paths are absolute (to avoid
	warnings under OS X).

2014-08-06  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_unix.tcl: Added support for sources with multiple